objects/Energy_Quote__c.object
<CustomObject>
    <fields>
        <fullName>TE_Sales_Office__c</fullName>
        <label>TE Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>CHILE</fullName>
                </value>
                <value>
                    <fullName>COLOMBIA</fullName>
                </value>
                <value>
                    <fullName>MEXICO</fullName>
                </value>
                <value>
                    <fullName>PERU</fullName>
                </value>
                <value>
                    <fullName>UNITED STATES</fullName>
                </value>
                <value>
                    <fullName>CARIBBEAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE_Sales_Person2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TE Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Energy_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TE_Sales_Person__c</fullName>
        <formula>Opportunity_Name__r.Account_Owner__r.FirstName + &apos; &apos; + Opportunity_Name__r.Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <summarizedField>Energy_Quote_Line_Item__c.TotalPrice__c</summarizedField>
        <summaryForeignKey>Energy_Quote_Line_Item__c.Energy_Quote_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Valid_Days__c</fullName>
        <formula>Case( Days_prices_valid__c , 
&quot;30 Days&quot;,&quot;30&quot;, 
&quot;60 Days&quot;,&quot;60&quot;, 
&quot;90 Days&quot;,&quot;90&quot;,
&quot;120 Days&quot;,&quot;120&quot;,
&quot;180 Days&quot;,&quot;180&quot;, 
&quot;1 year&quot;,&quot;365&quot;,
&quot;2 years&quot;,&quot;730&quot;,
&quot;3 years&quot;,&quot;1096&quot;,
&quot;4 years&quot;,&quot;1461&quot;,
&quot;5 years&quot;, &quot;1826&quot;,
&quot;0&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validity__c</fullName>
        <label>Validity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>6 months</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>12/31/16</fullName>
                </value>
                <value>
                    <fullName>12/31/17</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>12/31/18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Energy Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>QuoteNumber__c</columns>
        <columns>Quote_Number__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Energy Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Energy Quotes</pluralLabel>
    <recordTypes>
        <fullName>Energy_Quote</fullName>
        <active>true</active>
        <label>Energy Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>LMA_Approval_Quote</fullName>
        <active>true</active>
        <label>LMA Approval Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Quote</fullName>
        <active>true</active>
        <label>Sales Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Modify_Quote_Presented</fullName>
        <active>true</active>
        <description>Cannot edit the record once the quote has been submitted for Approval</description>
        <errorConditionFormula>text( Approval_Status__c ) = &apos;Presented&apos; &amp;&amp; TEXT( TE_Sales_Office__c) = &apos;UNITED STATES&apos;</errorConditionFormula>
        <errorMessage>Cannot edit the record once the quote has been submitted for Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Won_Required</fullName>
        <active>true</active>
        <description>When quote approval status is marked as Won, then  reaon won value must be filled in.</description>
        <errorConditionFormula>AND( ISPICKVAL( Approval_Status__c , &apos;Won&apos;), ISPICKVAL(  Reason_of_Win__c , &apos;&apos;) )</errorConditionFormula>
        <errorMessage>When quote approval status is marked as Won, Reason Won must be filled in.</errorMessage>
    </validationRules>
</CustomObject>